--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+*{
+  margin-top: 0;
+}
+
 .App {
   text-align: center;
+  background-color: yellow;
 }
 
 .App-logo {
@@ -35,4 +40,67 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1 {
+  background-color: blue;
+  color: yellow
+}
+
+h2{
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(255, 255, 255);
+}
+
+div.show-event{
+  display: flex;
+  background-image: url("../public/images/ticket_stub.png");
+  background-repeat: no-repeat;
+  height: 300px;
+  background-position: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+div.create{
+
+  background-repeat: no-repeat;
+  height:220px;
+  font-size: 17px;
+  font-weight:bold;
+  background-position: center;
+  color: rgb(0, 0, 0);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
+
+div.classy-container{
+  background-image: url("../public/images/wrestling.png");
+}
+
+h4{
+  color: rgb(0, 0, 0);
+}
+
+
+div#edit-event-form{
+  position: fixed;
+  top: 0;
+  font-weight: bold;
+  margin-top: 20%;
+  margin-left: 10%;
+  z-index: 1;
+  background-image: url("../public/images/ticket_stub2.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+button.submit{
+  margin-left: 20px;
+  font-size: 20px;
+  padding: 15px 32;
+  text-decoration: none;
+  color: white;
+  background-color: rgb(206, 37, 37);
 }
